--- a/src/index.html
+++ b/src/index.html
@@ -6,29 +6,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Air Quality App</title>
   <meta name="description" content="Code Assessment">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+  <style>
+    .form-floating {
+      position: relative;
+      ;
+    }
+
+    .suggestions {
+      max-height: 500px;
+      overflow-y: scroll;
+      visibility: hidden;
+      position: absolute;
+      z-index: 5;
+      transform: translate(15%);
+    }
+
+    .suggestions.active {
+      padding: 1rem;
+      visibility: visible;
+
+    }
+
+    body {
+      background-color: #89c2d9;
+    }
+  </style>
+
 </head>
 
 <body>
-
-  <main>
+  <main class="container-fluid">
     <h1>Code Assessment</h1>
     <form>
-      <fieldset>
-        <div class="column-1">
-          <div class="countryInputContainer">
-            <label for="country1">Country #1</label>
-            <input id="country1" type="text" placeholder="Enter a Country" class="js-country-input">
-            <ul class="suggestions">
-            </ul>
+      <fieldset class="container">
+        <div class="row">
+          <div class="col column-1">
+            <div class="countryInputContainer">
+              <div class="form-floating mb-3">
+                <input id="country1" type="text" placeholder="Enter a Country" class="js-country-input form-control">
+                <label for="country1">Country #1</label>
+              </div>
+              <ul class="suggestions list-group shadow mb-5 bg-body rounded">
+              </ul>
+            </div>
+          </div>
+
+          <div class="col column-2">
+            <div class="countryInputContainer">
+              <div class="form-floating mb-3">
+                <input id="country2" type="text" placeholder="Enter a Country" class="js-country-input form-control">
+                <label for="country2">Country #2</label>
+              </div>
+              <ul class="suggestions list-group shadow mb-5 bg-body rounded">
+              </ul>
+            </div>
           </div>
         </div>
 
-        <div class="column-2">
-          <div class="countryInputContainer">
-            <label for="country2">Country #2</label>
-            <input id="country2" type="text" placeholder="Enter a Country" class="js-country-input">
-            <ul class="suggestions">
-            </ul>
+
+        <div class="row">
+          <div class="col column-1">
+            <div class="cityInputContainer">
+              <div class="form-floating mb-3">
+                <input id="city1" type="text" placeholder="Enter a City" class="js-city-input form-control">
+                <label for="city1">City #1</label>
+              </div>
+
+              <ul class="suggestions list-group shadow mb-5 bg-body rounded">
+              </ul>
+            </div>
+          </div>
+
+          <div class="col column-2">
+            <div class="cityInputContainer">
+              <div class="form-floating mb-3">
+                <input id="city2" type="text" placeholder="Enter a City" class="js-city-input form-control">
+                <label for="city2">City #2</label>
+              </div>
+              <ul class="suggestions list-group shadow mb-5 bg-body rounded">
+              </ul>
+            </div>
           </div>
         </div>
       </fieldset>
